2014-01-02      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/ConvStringLong.mod:  check to see if the
	  conversion generates a NAN and return accordingly.
	* gm2/gm2-libs-iso/ConvStringReal.mod:  check to see if the
	  conversion generates a NAN and return accordingly.
	  This fixes a bug reported by:  Michael Riedl.

2014-01-01      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  many bugfixes to the shared library example.
	* gm2/gm2-compiler/M2GenGCC.mod:  FoldConvert use PopKindTree.
          PopKindTree new procedure function.  This fixes a bug reported
	  by:  Michael Riedl.  (see
	  http://lists.nongnu.org/archive/html/gm2/2015-02/msg00006.html).

2014-03-28      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  many bugfixes to the shared library example.

2014-03-16      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  many more improvements to pgeplayback.py
	  and twoDsim.mod.

2014-03-15      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  more changes to the shared library example.
	* gm2/gm2-libs/gdbif.mod:  New file.
	* gm2/gm2-libs/gdbif.def:  New file.

2014-02-25      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  huge amount of changes to expose the frame
	  buffer to python/pygame.

2014-02-19      Gaius Mulley <gaius@gnu.org>

	* libgm2/libiso/Makefile.in:  added MemStream.def and MemStream.mod
	  in list of modules to be built and installed.
	* gm2/gm2-libs-iso/MemStream.def:  New file.
	* gm2/gm2-libs-iso/MemStream.mod:  New file.

2014-02-17      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/Storage.mod:  fixed bug reported by
          reported by Michael Riedl <udo-michael.riedl@t-online.de>.
	  DEALLOCATE should assign the pointer to NIL.

2014-02-11      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge/pge.py:  tidied up formatting.
	* gm2/gm2-compiler/M2GenGCC.mod:  CanConvert (New procedure function).
	  CodeCast checks to see if non same sized types can be converted